# Numerical-Methods-Coursework

./: CMakeLists.txt  CMakePresets.json  numerical_result.txt  target_result.txt
coursework/: CMakeLists.txt  main.cpp
dependencies/: CMakeLists.txt
dependencies/doctest/: CMakeLists.txt
dependencies/indicators/: CMakeLists.txt
murlib/: CMakeLists.txt
murlib/include/murlib/: mesh.hpp
murlib/tests/: CMakeLists.txt  tests.cpp
report/: courseworkV.tex
source/: CMakeLists.txt  main.cpp  main2.cpp
tests/: CMakeLists.txt
